# sushi-sync

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.js
.github/workflows/: build-windows.yml
src/: app.css  app.html  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  main.rs  models.rs  parser.rs  simulation.rs
src/components/: AnalysisPanel.svelte  CustomerConfigModal.svelte  ExportModal.svelte  Header.svelte  LogTerminal.svelte  MasterTimeline.svelte  RestaurantMap.svelte  SeatConfigModal.svelte  SelectionTimeline.svelte
src/components/ui/: Badge.svelte  Button.svelte  Card.svelte  Input.svelte  LoadingOverlay.svelte  Modal.svelte  Select.svelte  Tooltip.svelte
src/routes/: +layout.svelte  +page.svelte
src/stores/: config.ts  index.ts  playback.ts  selection.ts  simulation.ts  ui.ts
