[package]
name = "sushi-sync"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rand = "0.9.2"

# Add to the end of src-tauri/Cargo.toml:
[profile.dev]
incremental = false # Disable incremental compilation to save disk space
debug = 0           # Disable debug symbols (this is the most space-consuming part)
strip = "debuginfo" # Remove debug info from the executable
